<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home"
        android:enabled="true"/>

    <item
        android:id="@+id/servicesFragment"
        android:icon="@drawable/ic_nav_service"
        android:title="@string/services"
        android:enabled="true"/>

    <item
        android:id="@+id/bookingFragment"
        android:icon="@drawable/ic_nav_booking"
        android:title="@string/booking"
        android:enabled="true"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/profile"
        android:enabled="true"/>
</menu>