<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_padding24"
    android:background="@drawable/all_curve_br_24_bl_24">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtLocation"
        style="@style/TextAppearance.MyTheme.SemiBold_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_padding16"
        android:layout_marginTop="@dimen/_padding9"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="@dimen/_padding8"
        android:text="@string/tempLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgCart"
        android:ellipsize="end"
        android:maxLines="1"
        />

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/_padding16"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_padding4"
        app:layout_constraintStart_toStartOf="@id/txtLocation"
        app:layout_constraintTop_toBottomOf="@id/txtLocation"
        app:layout_constraintEnd_toStartOf="@id/imgCart">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtAddress"
            style="@style/TextAppearance.MyTheme.Manrope_Regular_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/temAddress"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_padding8"
            android:src="@drawable/ic_drop_down_arrow_12"/>
    </LinearLayout>

<!--    <com.google.android.material.textview.MaterialTextView-->
<!--        android:id="@+id/txtAddress"-->
<!--        style="@style/TextAppearance.MyTheme.Manrope_Regular_12"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_padding4"-->
<!--        android:drawableEnd="@drawable/ic_drop_down_arrow_12"-->
<!--        android:drawablePadding="@dimen/_padding8"-->
<!--        android:text="@string/temAddress"-->
<!--        app:layout_constraintStart_toStartOf="@id/txtLocation"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txtLocation"-->
<!--        app:layout_constraintEnd_toStartOf="@id/imgCart"-->
<!--        android:layout_marginEnd="@dimen/_padding16"-->
<!--        android:ellipsize="end"-->
<!--        android:maxLines="1"/>-->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_padding20"
        app:layout_constraintBottom_toBottomOf="@id/llAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtLocation"
        app:srcCompat="@drawable/shopping_cart_24" />

    <include
        android:id="@+id/layoutNotification"
        layout="@layout/layout_common_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/imgCart"
        app:layout_constraintTop_toTopOf="@id/imgCart" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="@dimen/_padding48"
        android:layout_marginTop="@dimen/_padding16"
        android:layout_marginBottom="@dimen/_padding24"
        android:background="@drawable/all_curve_bg_white_border_1_gray_d1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imgCart"
        app:layout_constraintStart_toStartOf="@id/llAddress"
        app:layout_constraintTop_toBottomOf="@id/llAddress">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_padding16"
            android:layout_marginEnd="@dimen/_padding10"
            app:layout_constraintBottom_toBottomOf="@id/txtAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtLocation"
            app:srcCompat="@drawable/ic_search_16" />


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/search"
            android:outlineProvider="none"
            android:textColorHint="@color/black_19" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>